--- a/view/animation/index.html
+++ b/view/animation/index.html
@@ -37,12 +37,17 @@
         <div class="navbar navbar-default navbar-fixed-top" role="navigation" id="top-nav">
           <div class="container">
             <div class="navbar-header">
-                <h3 style="margin: 1em 0 1em 0;">Link ACG</h3>
+                <h3 style="margin: 1em 0 1em 0;display: inline-block">Link ACG</h3>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" style="margin-top:1.8em;">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
             </div>
 
             <div class="navbar-collapse  collapse">
-              <ul class="nav navbar-nav navbar-right scroll">
+              <ul class="nav navbar-nav navbar-right">
                  <li class="active"><a href="#works">Header</a></li>
                  <li ><a href="#Company">日本动画制作公司</a></li>
                  <li ><a href="#partners">业内知名人士</a></li>
@@ -62,7 +67,7 @@
             <h2>来自风平浪静的明天</h2>
             <p>以前的人们生活在海中的世界，能够在大海中呼吸并且生活。然而不久之后憧憬陆地的人们抛弃了大海，舍弃了海神所赐予的羽衣。人类逐渐分成在海中生活的人类以及在陆上生活的人类，原本同样相互交流的人们，随着时间流逝，想法也不相同了。
                 在海中生活的四名少年少女——先岛光、向井户爱花、比良平千咲、伊佐木要。他们因海村汐鹿生的波路中学被废校而转学到陆地上—鸳大师的美滨中学，并在那里遇到了在陆地上出生的少年——木原纺，他们由此相会、交流。<br>
-            <a href="images/portfolio/1.jpg" title="来自风平浪静的明天" data-gallery>View more</a></p>
+            <a href="images/portfolio/1.jpg" title="来自风平浪静的明天" data-gallery>查看大图</a></p>
         </figcaption>
     </figure>
      <figure class="effect-oscar  wowload fadeInUp">
