--- a/view/game/index.html
+++ b/view/game/index.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<span class="menu"></span>
 		<div class="navigation">
-			<ul class="navig cl-effect-4" >
+			<ul class="navig" >
 				<li><a href="index.html">游戏主页</a></li>
 				<li><a href="games.html">游戏公司</a></li>
 				<li><a href="blog.html">游戏主机</a></li>
@@ -26,7 +26,6 @@
 			<script>
                 $( "span.menu" ).click(function() {
                     $( ".navigation" ).slideToggle( "slow", function() {
-                        // Animation complete.
                     });
                 });
 			</script>
@@ -123,7 +122,7 @@
 							removalDelay: 300,
 							mainClass: 'my-mfp-zoom-in'
 						});
-																						
+
 						});
 				</script>
 		</div>
